chore: add room

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -3,11 +3,10 @@ title: schedule
 ---
 
 <!-- last-minute-tag -->
-<!-- last-minute-2025 -->
 
 :spiral_calendar: September 16, 2025
 :alarm_clock:     09:00 - 17:00  
-:hotel:           ROOM TBD  
+:hotel:           Hanover C 
 :writing_hand:    [pos.it/conf](http://pos.it/conf)
 
 
