--- a/01-functions-01.qmd
+++ b/01-functions-01.qmd
@@ -1,7 +1,7 @@
 ---
 title: "useR to programmeR"
 subtitle: "👋 & Functions 1"
-author: "Emma Rand and Ian Lyttle <br>WiFi: <TODO><br>Password: <TODO>"
+author: "Emma Rand and Ian Lyttle <br>WiFi: On your badges"
 format: 
   revealjs:
     theme: [simple, styles.scss]
@@ -37,8 +37,6 @@ especially, reduce the amount of duplication in their code.
 ## The team
 
 <!-- last-minute-tag -->
-
-<!-- last-minute-2025 -->
 
 ::::: columns
 ::: {.column width="55%"}
@@ -77,10 +75,7 @@ especially, reduce the amount of duplication in their code.
 
 <!-- last-minute-tag -->
 
-<!-- last-minute-2025 -->
-
--   Network: <TODO>
--   Password: <TODO>
+On your badges!
 
 ## Introductions
 
@@ -130,7 +125,6 @@ colours: E102, E110, E122, E124, E133, E142.
 
 <!-- last-minute-tag -->
 
-<!-- last-minute-2025 -->
 
 [Code of Conduct](https://posit.co/code-of-conduct/). **Please Review**
 
@@ -142,24 +136,22 @@ Reporting:
 
 -   🗣️ any posit::conf staff member (t-shirt) or Info desk
 -   📧 `codeofconduct@posit.com`
--   ☎️ 844-448-1212
 
 ## Housekeeping
 
 <!-- last-minute-tag -->
 
-<!-- last-minute-2025 -->
+-   Gender-neutral bathrooms:
 
--   There are gender-neutral bathrooms on levels 3, 4, 5, 6 & 7
--   Meditation/prayer rooms: in 503. Open Mon/Tues 0700 - 1900, Wed
-    0700 - 1700
--   Lactation room: in 509 Open Mon/Tues 0700 - 1900, Wed 0700 - 1700
+    - LL1 - Off the back of the Centennial Foyer 
+    - LL2 - Next to Chicago A
+
+-   Meditation/prayer rooms: LL2 - Chicago A
+-   Lactation room: LL2 - Chicago B
 
 ## 🙏 to
 
 <!-- last-minute-tag -->
-
-<!-- last-minute-2025 -->
 
 -   Garrett
 
