--- a/01-functions-01.qmd
+++ b/01-functions-01.qmd
@@ -191,7 +191,7 @@ RStudio 2023.03. You will need packages:
 ## Schedule {.smaller}
 
 | Time | Activity |
-|:---|:---|
+|:-----------------------------------|:-----------------------------------|
 | 09:00 - 10:30 | [Functions 1](01-functions-01.html) Introduction, vector and dataframe functions, embracing |
 | 10:30 - 11:00 | ☕ *Coffee break* |
 | 11:00 - 12:30 | [Functions 2](02-functions-02.html) Plot functions, style and side effects |
@@ -932,7 +932,7 @@ dplyr](https://dplyr.tidyverse.org/articles/programming.html)
 
 ## Fix `my_summary()` function
 
-The solution is to use embracing: ``` {``{ var }``} ```
+The solution is to use embracing: `{{ var }}`
 
 ```{r}
 my_summary <- function(df, column){
@@ -1076,7 +1076,7 @@ my_summary(penguins, bill_length_mm, c(species, island))
 
 -   Give arguments a default where possible
 
--   We use ``` {``{ var }``} ``` embracing to manage data masking
+-   We use `{{ var }}` embracing to manage data masking
 
 -   We use `pick()` to select more than one variable
 :::
